tests/NormalTests/paczka1/fuzzy1/21170539.err
Error in line 1: A876 A876 79,6
Error in line 2: A876 S617 96,9
Error in line 9: A876 A55 81,5
Error in line 14: NZF A55 15,6
Error in line 34: IultDn A55 58,8
Error in line 38: sAMjtFG0 S639 82,7
